--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
-    <div style="text-align:center; margin:2rem 0; ">
+    <div class="pragmatic_header">
         <div>
-            <h1 style="font-family: 'Lobster', cursive;">Pragmatic</h1>
+            <h1 class="pragmatic_logo">Pragmatic</h1>
         </div>
 
         <div>
