--- a/templates/header.html
+++ b/templates/header.html
@@ -7,7 +7,14 @@
             <span>nav1</span>
             <span>nav1</span>
             <span>nav1</span>
-            <span>nav1</span>
-
+            {% if not user.is_authenticated %}
+            <a href="{% url 'accountapp:login' %}?next={{ request.path }}">
+                <span>login</span>
+            </a>
+            {% else %}
+            <a href="{% url 'accountapp:logout'%}?next={{ request.path}}">
+                <sapn>logout</sapn>
+            </a>
+            {% endif %}
         </div>
     </div>
