Account Update form

--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -11,6 +11,14 @@
             <h2>
                 {{ target_user.username }}
             </h2>
+
+            {% if target_user == user %}
+            <a href="{% url 'accountapp:update' pk=user.pk %}">
+                <p>
+                    Chage Info
+                </p>
+            </a>
+            {% endif %}
         </div>
     </div>
 
