--- a/accountapp/templates/accountapp/update.html
+++ b/accountapp/templates/accountapp/update.html
@@ -5,13 +5,12 @@
 
     <div style="text-align:center; max-width: 400px; margin:4rem auto">
         <div class="mb-4">
-            <h4>SignUp</h4>
+            <h4>Change Info</h4>
         </div>
-        <form action="{% url 'accountapp:create'%}" method="post">
+        <form action="{% url 'accountapp:update' pk=user.pk %}" method="post">
             {% csrf_token %}
 
             {% bootstrap_form form %}
-
 
             <input type="submit" class="btn btn-dark rounded-pill col-6 mt-3">
         </form>
