add Account Delete

--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -18,6 +18,12 @@
                     Chage Info
                 </p>
             </a>
+            <a href="{% url 'accountapp:delete' pk=user.pk %}">
+                <p>
+                    Quit
+                </p>
+            </a>
+
             {% endif %}
         </div>
     </div>
