--- a/templates/header.html
+++ b/templates/header.html
@@ -9,15 +9,19 @@
             <span>nav1</span>
             {% if not user.is_authenticated %}
             <a href="{% url 'accountapp:login' %}?next={{ request.path }}">
-                <span>login</span>
+                <span>Login</span>
             </a>
+            <a href="{% url 'accountapp:create' %}">
+                <span>SignUp</span>
+            </a>
+
             {% else %}
             <a href="{% url 'accountapp:detail' pk=user.pk%}">
                 <sapn>MyPage</sapn>
             </a>
 
             <a href="{% url 'accountapp:logout'%}?next={{ request.path}}">
-                <sapn>logout</sapn>
+                <sapn>Logout</sapn>
             </a>
 
             {% endif %}
