--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -8,16 +8,23 @@
                 {{ target_user.date_joined }}
             </p>
 
-
+            <img src="{{ target_user.profile.image.url }}" alt=""
+                 style="height: 12rem; width: 12rem; border-radius:20rem; margin-bottom:2rem;">
             {% if target_user.profile %}
             <h2>
                 {{ target_user.profile.nickname }}
+                <a href="{% url 'profileapp:update' pk=target_user.profile.pk %}">edit</a>
             </h2>
             {% else %}
             <a href="{% url 'profileapp:create'%}">
                 <h2> Create Profile</h2>
             </a>
             {% endif %}
+
+            <h5 style="margin-bottom:4rem;">
+                {{ target_user.profile.message }}
+            </h5>
+
             {% if target_user == user %}
             <a href="{% url 'accountapp:update' pk=user.pk %}">
                 <p>
