--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -2,44 +2,53 @@
 
 {% block content %}
 
-    <div>
-        <div style="text-align: center; max-width: 500px; margin: 4rem auto;">
-            <p>
-                {{ target_user.date_joined }}
-            </p>
+<div>
+    <div style="text-align: center; max-width: 500px; margin: 4rem auto;">
+        <p>
+            {{ target_user.date_joined }}
+        </p>
+        {% if target_user.profile %}
 
-            <img src="{{ target_user.profile.image.url }}" alt=""
-                 style="height: 12rem; width: 12rem; border-radius:20rem; margin-bottom:2rem;">
-            {% if target_user.profile %}
-            <h2>
-                {{ target_user.profile.nickname }}
-                <a href="{% url 'profileapp:update' pk=target_user.profile.pk %}">edit</a>
-            </h2>
-            {% else %}
-            <a href="{% url 'profileapp:create'%}">
-                <h2> Create Profile</h2>
-            </a>
-            {% endif %}
-
-            <h5 style="margin-bottom:4rem;">
-                {{ target_user.profile.message }}
-            </h5>
-
+        <img src="{{ target_user.profile.image.url }}" alt=""
+            style="height: 12rem; width: 12rem; border-radius:20rem; margin-bottom:2rem;">
+        <h2>
+            {{ target_user.profile.nickname }}
             {% if target_user == user %}
-            <a href="{% url 'accountapp:update' pk=user.pk %}">
-                <p>
-                    Chage Info
-                </p>
-            </a>
-            <a href="{% url 'accountapp:delete' pk=user.pk %}">
-                <p>
-                    Quit
-                </p>
-            </a>
-
+            <a href="{% url 'profileapp:update' pk=target_user.profile.pk %}">edit</a>
             {% endif %}
-        </div>
+        </h2>
+        <h5 style="margin-bottom:4rem;">
+            {{ target_user.profile.message }}
+        </h5>
+
+        {% else %}
+        {% if target_user == user %}
+
+        <a href="{% url 'profileapp:create'%}">
+            <h2> Create Profile</h2>
+        </a>
+        {% else %}
+        <h2>닉네임 미설정</h2>
+        {% endif %}
+        {% endif %}
+
+
+        {% if target_user == user %}
+        <a href="{% url 'accountapp:update' pk=user.pk %}">
+            <p>
+                Chage Info
+            </p>
+        </a>
+
+        <a href="{% url 'accountapp:delete' pk=user.pk %}">
+            <p>
+                Quit
+            </p>
+        </a>
+
+        {% endif %}
     </div>
+</div>
 
 
 {% endblock %}
