게시글 생성,수정,삭제

--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -66,18 +66,12 @@
         <img src="https://picsum.photos/200/430" alt="">
     </div>
 
-    <div class="item2">2</div>
-    <div class="item3">3</div>
-    <div class="item4">4</div>
-    <div class="item5">5</div>
-    <div class="item6">6</div>
-    <div class="item7">7</div>
-    <div class="item8">8</div>
-    <div class="item9">9</div>
-    <div class="item10">10</div>
-    <div class="item11">11</div>
-    <div class="item12">12</div>
-    <div class="item13">13</div>
+</div>
+
+<div style="text-align:center;">
+    <a href="{% url 'articleapp:create' %}" class="btn btn-dark rounded-pill col-3 mt-3 mb-3">
+        Create Article
+    </a>
 </div>
 
 <script src="{% static 'js/magicgrid.js' %}">
