article list구현 및 detail뷰 수정

--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -18,55 +18,27 @@
 
     }
 </style>
-
+{% if article_list %}
 <div class="container">
-    <div class="item1">
-        <img src=" https://picsum.photos/200/300" alt="">
-    </div>
-    <div>
-        <img src="https://picsum.photos/200/340" alt="">
-    </div>
-    <div>
-        <img src="https://picsum.photos/200/310" alt="">
-    </div>
-    <div>
-        <img src="https://picsum.photos/200/320" alt="">
-    </div>
-    <div>
-        <img src="https://picsum.photos/200/330" alt="">
-    </div>
-    <div>
-        <img src="https://picsum.photos/200/340" alt="">
-    </div>
-    <div>
-        <img src="https://picsum.photos/200/350" alt="">
-    </div>
-    <div>
-        <img src="https://picsum.photos/200/370" alt="">
-    </div>
-    <div>
-        <img src="https://picsum.photos/200/360" alt="">
-    </div>
-    <div>
-        <img src="https://picsum.photos/200/380" alt="">
-    </div>
-    <div>
-        <img src="https://picsum.photos/200/390" alt="">
-    </div>
-    <div>
-        <img src="https://picsum.photos/200/400" alt="">
-    </div>
-    <div>
-        <img src="https://picsum.photos/200/410" alt="">
-    </div>
-    <div>
-        <img src="https://picsum.photos/200/420" alt="">
-    </div>
-    <div>
-        <img src="https://picsum.photos/200/430" alt="">
-    </div>
 
+    {% for article in article_list %}
+    <a href="{% url 'articleapp:detail' pk=article.pk %}">
+        {% include 'snippets/card.html' with article=article %}
+    </a>
+    {% endfor %}
 </div>
+<script src="{% static 'js/magicgrid.js' %}"></script>
+
+{% else %}
+<div class="text-center">
+    <h1>No Article YET!</h1>
+</div>
+{% endif %}
+
+{% include 'snippets/pagination.html' with page_obj=page_obj %}
+
+
+
 
 <div style="text-align:center;">
     <a href="{% url 'articleapp:create' %}" class="btn btn-dark rounded-pill col-3 mt-3 mb-3">
@@ -74,9 +46,8 @@
     </a>
 </div>
 
-<script src="{% static 'js/magicgrid.js' %}">
 
-</script>
+
 
 
 
