comment앱 생성 및 모델링/form생성

--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -30,6 +30,9 @@
         </a>
         {% endif %}
         <hr>
+
+        {% include 'commentapp/create.html' with article=target_article %}
+
     </div>
 </div>
 
