--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -31,6 +31,11 @@
         {% endif %}
         <hr>
 
+        {% for comment in target_article.comment.all %}
+            {% include 'commentapp/detail.html' with comment=comment %}
+        {% endfor %}
+
+
         {% include 'commentapp/create.html' with article=target_article %}
 
     </div>
