Project앱 추가 및 기타 템플릿 수정

--- a/templates/header.html
+++ b/templates/header.html
@@ -3,26 +3,27 @@
             <h1 class="pragmatic_logo">Pragmatic</h1>
         </div>
 
-        <div>
-            <a href="{% url 'articleapp:list' %}">
+        <div class="pragmatic_header_navbar">
+            <a href="{% url 'articleapp:list' %}" class="pragmatic_header_nav">
                 <span>Articles</span>
             </a>
-            <span>nav1</span>
-            <span>nav1</span>
+            <a href="{% url 'projectapp:list' %}" class="pragmatic_header_nav">
+            <span>Projects</span>
+            </a>
             {% if not user.is_authenticated %}
-            <a href="{% url 'accountapp:login' %}?next={{ request.path }}">
+            <a href="{% url 'accountapp:login' %}?next={{ request.path }}" class="pragmatic_header_nav">
                 <span>Login</span>
             </a>
-            <a href="{% url 'accountapp:create' %}">
+            <a href="{% url 'accountapp:create' %}" class="pragmatic_header_nav">
                 <span>SignUp</span>
             </a>
 
             {% else %}
-            <a href="{% url 'accountapp:detail' pk=user.pk%}">
+            <a href="{% url 'accountapp:detail' pk=user.pk%}" class="pragmatic_header_nav">
                 <sapn>MyPage</sapn>
             </a>
 
-            <a href="{% url 'accountapp:logout'%}?next={{ request.path}}">
+            <a href="{% url 'accountapp:logout'%}?next={{ request.path}}" class="pragmatic_header_nav">
                 <sapn>Logout</sapn>
             </a>
 
