--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -10,11 +10,11 @@
         {% if target_user.profile %}
 
         <img src="{{ target_user.profile.image.url }}" alt=""
-            style="height: 12rem; width: 12rem; border-radius:20rem; margin-bottom:2rem;">
+            style="height: 12rem; width: 12rem; border-radius:20rem; margin-bottom:2rem; object-fit: cover;">
         <h2>
             {{ target_user.profile.nickname }}
             {% if target_user == user %}
-            <a href="{% url 'profileapp:update' pk=target_user.profile.pk %}">edit</a>
+            <a href="{% url 'profileapp:update' pk=target_user.profile.pk %}" style="color: darkgreen;">edit</a>
             {% endif %}
         </h2>
         <h5 style="margin-bottom:4rem;">
