project - article & user - article 연결

--- a/projectapp/templates/projectapp/detail.html
+++ b/projectapp/templates/projectapp/detail.html
@@ -10,9 +10,15 @@
         <h2>
             {{ target_project.title }}
         </h2>
-        <h5>
+        <h5 style="margin-bottom:3rem;">
             {{ target_project.description }}
         </h5>
+    </div>
+
+    <div>
+
+        {% include 'snippets/list_fragment.html' with article_list=object_list %}
+
     </div>
 </div>
 
