--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
-
+{% load bootstrap4 %}
 {% block content %}
+<script src="//cdn.jsdelivr.net/npm/medium-editor@5.23.2/dist/js/medium-editor.min.js"></script>
+<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@5.23.2/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
+
 
 <div>
     <div style="text-align: center; max-width: 700px; margin: 4rem auto;">
@@ -15,9 +18,9 @@
         <img style="width: 100%; border-radius: 1rem; margin: 2rem 0;"
                 src="{{ target_article.image.url }}" alt="">
 
-        <p>
-            {{ target_article.content }}
-        </p>
+        <div style="text-align:left; ">
+            {{ target_article.content | safe }}
+        </div>
 
         {% if target_article.writer == user %}
         <a href="{% url 'articleapp:update' pk=target_article.pk %}"
@@ -40,6 +43,8 @@
 
     </div>
 </div>
+
+<script>var editor = new MediumEditor('.editable');</script>
 
 
 {% endblock %}
