--- a/accountapp/templates/accountapp/update.html
+++ b/accountapp/templates/accountapp/update.html
@@ -6,6 +6,7 @@
     <div style="text-align:center; max-width: 400px; margin:4rem auto">
         <div class="mb-4">
             <h4>Change Info</h4>
+            <h6>정보 변경 뒤엔 재로그인이 필요합니다.</h6>
         </div>
         <form action="{% url 'accountapp:update' pk=target_user.pk %}" method="post">
             {% csrf_token %}
