List Template 수정

--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -21,7 +21,8 @@
     }
 
     .container img {
-        width: 100%;
+        width: 15rem;
+        height: 15rem;
         border-radius: 1rem;
 
     }
@@ -44,8 +45,6 @@
 {% endif %}
 
 {% include 'snippets/pagination.html' with page_obj=page_obj %}
-
-
 
 
 <div style="text-align:center;">
