--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -21,8 +21,7 @@
     }
 
     .container img {
-        width: 15rem;
-        height: 15rem;
+        width: 100%;
         border-radius: 1rem;
 
     }
