좋아요 기능 모델작성

--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -10,6 +10,16 @@
         <h1>
             {{ target_article.title }}
         </h1>
+        <div style="height:2rem;">
+          <a href="">
+            <i style="verticla-align: middle; font-size:1.2rem; color: #f77" class="material-icons">
+                favorite
+            </i>
+          </a>
+            <span style="verticla-align: middle; font-size:1.2rem;" >
+                {{target_article.like}}
+            </span>
+        </div>
         <h6>
             {{ target_article.writer.profile.nickname }}
         </h6>
