좋아요 기능 구현

--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -11,7 +11,7 @@
             {{ target_article.title }}
         </h1>
         <div style="height:2rem;">
-          <a href="">
+          <a href="{% url 'likeapp:article_like' pk=target_article.pk %}">
             <i style="verticla-align: middle; font-size:1.2rem; color: #f77" class="material-icons">
                 favorite
             </i>
