--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,18 @@
     {% include 'header.html' %}
 
     <hr>
+
+    {% for message in messages %}
+
+    <div class="text-center">
+        <div class="btn btn-{{ message.tags }} rounded-pill px-5 my-3">
+            {{ message }}
+
+        </div>
+    </div>
+
+    {% endfor %}
+
     {% block content %}
     {% endblock %}
     <hr>
